# OpenCV

./: CMakeLists.txt  count.cpp  feature.h  main.cpp  main.h  steger.cpp  wedding.h
